[package]
name = "simd-psmap"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Manson"]
license = "MIT"
readme = "README.md"
categories = ["algorithms", "data-structures"]
keywords = ["collection", "simd", "map"]


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
highway = "1.3.0"
rand = "0.9.0"

[[bench]]
name = "main"
harness = false

